--- a/header_nav.html
+++ b/header_nav.html
@@ -1,4 +1,4 @@
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
     <nav id="nav">
       <div id="bar">
         <div id="navlogo">
