--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
   <div id="incnav"></div>
 
   <script type="text/javascript">
-    include("/header_nav.html", "incnav", addNavigationEvents);
+    include("./header_nav.html", "incnav", addNavigationEvents);
   </script>
 
   <section class="maincontent">
@@ -197,7 +197,7 @@
   <div id="incfooter"></div>
 
   <script type="text/javascript">
-    include("/footer.html", "incfooter");
+    include("./footer.html", "incfooter");
   </script>
 </body>
 
