--- a/outreach.html
+++ b/outreach.html
@@ -21,7 +21,7 @@
     <div id="inc"></div>
 
     <script type="text/javascript">
-      include("http://mns.k.u-tokyo.ac.jp/header_nav.html", "inc", addNavigationEvents);
+      include("./header_nav.html", "inc", addNavigationEvents);
     </script>
 
     <section class="maincontent">
@@ -43,7 +43,7 @@
     <div id="incfooter"></div>
 
     <script type="text/javascript">
-      include("http://mns.k.u-tokyo.ac.jp/footer.html", "incfooter");
+      include("./footer.html", "incfooter");
     </script>
   </body>
 </html>
