--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Okada Lab, The University of Tokyo">
   <meta property="og:type" content="article">
   <meta property="og:description" content="Okada Lab, The University of Tokyo">
-  <meta property="og:url" content="http://mns.k.u-tokyo.ac.jp/">
+  <meta property="og:url" content="./">
   <meta property="og:image" content="./image/og.png">
   <link rel="shortcut icon" href="./favicon.ico">
   <link rel="stylesheet" href="./css/main.css">
@@ -23,7 +23,7 @@
   <div id="inc"></div>
 
   <script type="text/javascript">
-    include("/header_nav.html", "inc", addNavigationEvents);
+    include("./header_nav.html", "inc", addNavigationEvents);
   </script>
 
   <section class="maincontent">
@@ -68,7 +68,7 @@
 
       <a class="anchor" id="publications"></a>
       <h2><em>Publications</em></h2>
-      <a href="http://mns.k.u-tokyo.ac.jp/~okada/">業績一覧</a>
+      <a href="./okada/">業績一覧</a>
 
       <a class="anchor" id="awards"></a>
       <h2><em>Awards</em></h2>
@@ -97,87 +97,87 @@
           style="font-size:22px;display:inline-block;line-height:130%;text-indent:0px"><strong>学会での受賞</strong></span>
         <br />
         <br />
-        <a href="http://mns.k.u-tokyo.ac.jp/~karakida/" rel="nofollow">唐木田亮</a>
+        <a href="./karakida/" rel="nofollow">唐木田亮</a>
         IBIS2015 学生最優秀プレゼンテーション賞</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~tokuda/" rel="nofollow">徳田悟</a>
+      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
         ImPACT未来開拓研究会 ベストポスター賞</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~tokuda/" rel="nofollow">徳田悟</a>
+      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
         2015年度物性若手夏の学校 分科会最優秀発表者 (分野A)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~tokuda/" rel="nofollow">徳田悟</a>
+      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
         2015年度人工知能学会 全国大会優秀賞 (口頭発表部門／インタラクティブ発表部門)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~karakida/" rel="nofollow">唐木田亮</a>
+      <p><a href="./karakida/" rel="nofollow">唐木田亮</a>
         2014年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~karakida/" rel="nofollow">唐木田亮</a>
+      <p><a href="./karakida/" rel="nofollow">唐木田亮</a>
         日本神経回路学会大会奨励賞
         日本神経回路学会第24回全国大会 (JNNS2014)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~tokuda/" rel="nofollow">徳田悟</a>
+      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
         2013年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~hterashima/" rel="nofollow">寺島裕貴</a>
+      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
         人工知能学会全国大会学生奨励賞
         第27回人工知能学会全国大会(JSAI2013)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Enagata/" rel="nofollow">永田賢二</a>
+      <p><a href="./%7Enagata/" rel="nofollow">永田賢二</a>
         2011年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eotsubo/" rel="nofollow">大坪洋介</a>
+      <p><a href="./%7Eotsubo/" rel="nofollow">大坪洋介</a>
         2011年度IEEE CIS Japan Chapter Young Researcher Award</p>
       <p>桑谷立
         2011年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~hterashima/" rel="nofollow">寺島裕貴</a>
+      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
         日本神経回路学会大会奨励賞
         日本神経回路学会第21回全国大会 (JNNS2011)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Enagata/" rel="nofollow">永田賢二</a>
+      <p><a href="./%7Enagata/" rel="nofollow">永田賢二</a>
         情報論的学習理論ワークショップ(IBIS2011)ポスター奨励賞</p>
-      <p>Ryota Hasegawa, <a href="http://mns.k.u-tokyo.ac.jp/~okada/" rel="nofollow">Masato Okada</a> and <a
+      <p>Ryota Hasegawa, <a href="./okada/" rel="nofollow">Masato Okada</a> and <a
           href="http://www2.ipcku.kansai-u.ac.jp/~miyoshi/cnt/miyoshi.html" rel="nofollow">Seiji Miyoshi</a>
         Journal of the Physical Society of Japan Papers of Editors' Choice (2011)
         <br /></p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~hterashima/" rel="nofollow">寺島裕貴</a>
+      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
         人工知能学会全国大会優秀賞(口頭発表部門)
         第25回人工知能学会全国大会 (JSAI2011)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Etakiyama/" rel="nofollow">瀧山健</a>
+      <p><a href="./%7Etakiyama/" rel="nofollow">瀧山健</a>
         第五回Motor Control研究会優秀発表賞</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eiida/" rel="nofollow">飯田宗徳</a> <a
-          href="http://mns.k.u-tokyo.ac.jp/%7Eomori/" rel="nofollow">大森敏明</a> <a
+      <p><a href="./%7Eiida/" rel="nofollow">飯田宗徳</a> <a
+          href="./%7Eomori/" rel="nofollow">大森敏明</a> <a
           href="http://www.acs.dis.titech.ac.jp/index.html" rel="nofollow">青西亨</a> <a
-          href="http://mns.k.u-tokyo.ac.jp/%7Eokada/" rel="nofollow">岡田真人</a>
+          href="./%7Eokada/" rel="nofollow">岡田真人</a>
         情報処理学会　平成22年度 情報処理学会論文誌 数理モデル化と応用 優秀論文賞</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~hterashima/" rel="nofollow">寺島裕貴</a>
+      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
         SNSS2011 Data Analysis Challenge Award
         システム神経生物学スプリングスクール 2011 (SNSS2011)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/~hterashima/" rel="nofollow">寺島裕貴</a>
+      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
         Organization for Computational Neuroscience Student Travel Award
         19th Annual Computational Neuroscience Meeting (CNS*2010)</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eomori/" rel="nofollow">大森敏明</a> 計測自動制御学会 生体・生理工学部会 研究奨励賞</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eiida/" rel="nofollow">飯田宗徳</a> 情報処理学会　平成22年度山下記念研究賞</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eiida/" rel="nofollow">飯田宗徳</a> 情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eshimizu/" rel="nofollow">清水裕一郎</a> 情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010
+      <p><a href="./%7Eomori/" rel="nofollow">大森敏明</a> 計測自動制御学会 生体・生理工学部会 研究奨励賞</p>
+      <p><a href="./%7Eiida/" rel="nofollow">飯田宗徳</a> 情報処理学会　平成22年度山下記念研究賞</p>
+      <p><a href="./%7Eiida/" rel="nofollow">飯田宗徳</a> 情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010</p>
+      <p><a href="./%7Eshimizu/" rel="nofollow">清水裕一郎</a> 情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010
       </p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Etakiyama/" rel="nofollow">瀧山健</a> 2009年度IEEE CIS Japan Chapter Young
+      <p><a href="./%7Etakiyama/" rel="nofollow">瀧山健</a> 2009年度IEEE CIS Japan Chapter Young
         Researcher Award</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Etakiyama/" rel="nofollow">瀧山健</a> 日本神経回路学会2009年度全国大会　大会奨励賞
+      <p><a href="./%7Etakiyama/" rel="nofollow">瀧山健</a> 日本神経回路学会2009年度全国大会　大会奨励賞
         <br /></p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eotsubo/" rel="nofollow">大坪洋介</a> 日本神経回路学会2009年度全国大会　大会奨励賞
+      <p><a href="./%7Eotsubo/" rel="nofollow">大坪洋介</a> 日本神経回路学会2009年度全国大会　大会奨励賞
         <br /></p>
       <p><span class="noexists">Kazuho Watanabe<a
-            href="http://mns.k.u-tokyo.ac.jp/index.php?cmd=edit&amp;page=Kazuho%20Watanabe&amp;refer=%BC%F5%BE%DE">?</a></span>,
+            href="./index.php?cmd=edit&amp;page=Kazuho%20Watanabe&amp;refer=%BC%F5%BE%DE">?</a></span>,
         <span class="noexists">Shotaro Akaho<a
-            href="http://mns.k.u-tokyo.ac.jp/index.php?cmd=edit&amp;page=Shotaro%20Akaho&amp;refer=%BC%F5%BE%DE">?</a></span>,
+            href="./index.php?cmd=edit&amp;page=Shotaro%20Akaho&amp;refer=%BC%F5%BE%DE">?</a></span>,
         <span class="noexists">Shinichiro Omachi<a
-            href="http://mns.k.u-tokyo.ac.jp/index.php?cmd=edit&amp;page=Shinichiro%20Omachi&amp;refer=%BC%F5%BE%DE">?</a></span>
-        and <a href="http://mns.k.u-tokyo.ac.jp/~okada/" rel="nofollow">Masato Okada</a>　The German Classification
+            href="./index.php?cmd=edit&amp;page=Shinichiro%20Omachi&amp;refer=%BC%F5%BE%DE">?</a></span>
+        and <a href="./okada/" rel="nofollow">Masato Okada</a>　The German Classification
         Society - Method Award, 33rd Annual Conference of the GfKI, March 13th, 2009.</p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eoizumi/" rel="nofollow">大泉匡史</a> 2008年度日本神経回路学会　研究賞
+      <p><a href="./%7Eoizumi/" rel="nofollow">大泉匡史</a> 2008年度日本神経回路学会　研究賞
         <br /></p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eoizumi/" rel="nofollow">大泉匡史</a> 2007年度IEEE CIS Japan Chapter Young
+      <p><a href="./%7Eoizumi/" rel="nofollow">大泉匡史</a> 2007年度IEEE CIS Japan Chapter Young
         Researcher Award
         <br /></p>
       <p><a href="http://www.stat.phys.titech.ac.jp/~sei/index_ja.html" rel="nofollow">鈴木正</a> 2007年度日本物理学会　若手奨励賞
         <br /></p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Eoizumi/" rel="nofollow">大泉匡史</a> 2006年度日本神経回路学会　奨励賞
+      <p><a href="./%7Eoizumi/" rel="nofollow">大泉匡史</a> 2006年度日本神経回路学会　奨励賞
         <br /></p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Emiura/" rel="nofollow">三浦佳二</a>
+      <p><a href="./%7Emiura/" rel="nofollow">三浦佳二</a>
         Neural Information Processing System Conference Outstanding Student Paper Awards (2005)
         <br /></p>
-      <p><a href="http://mns.k.u-tokyo.ac.jp/%7Emiura/" rel="nofollow">三浦佳二</a>　2005年度日本神経回路学会　研究賞
+      <p><a href="./%7Emiura/" rel="nofollow">三浦佳二</a>　2005年度日本神経回路学会　研究賞
         <br /></p>
       <p><a href="http://www.stat.phys.titech.ac.jp/~sei/index_ja.html" rel="nofollow">鈴木正</a><br /></p>
 
@@ -187,7 +187,7 @@
   <div id="incfooter"></div>
 
   <script type="text/javascript">
-    include("http://mns.k.u-tokyo.ac.jp/footer.html", "incfooter");
+    include("./footer.html", "incfooter");
   </script>
 </body>
 
