--- a/teaching.html
+++ b/teaching.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Okada Lab, The University of Tokyo">
     <meta property="og:type" content="article">
     <meta property="og:description" content="Okada Lab, The University of Tokyo">
-    <meta property="og:url" content="http://mns.k.u-tokyo.ac.jp/">
+    <meta property="og:url" content="./">
     <meta property="og:image" content="./image/og.png">
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/main.css">
@@ -21,7 +21,7 @@
     <div id="inc"></div>
 
     <script type="text/javascript">
-      include("/header_nav.html", "inc", addNavigationEvents);
+      include("./header_nav.html", "inc", addNavigationEvents);
     </script>
 
     <section class="maincontent">
@@ -35,7 +35,7 @@
     <div id="incfooter"></div>
 
     <script type="text/javascript">
-      include("http://mns.k.u-tokyo.ac.jp/footer.html", "incfooter");
+      include("./footer.html", "incfooter");
     </script>
   </body>
 </html>
