岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -92,9 +92,14 @@
 				<div class="inner">
 					<div class="article">
 					  
-<h4>2021(294～304)</h4>
-<ol reversed start="304">
+<h4>2021(294～305)</h4>
+<ol reversed start="305">
 
+<li>Hiroyuki Kumazoe, Yasuhiko Igarashi, Fabio Iesari, Ryota Shimizu, Yuya Komatsu, Taro Hitosugi, Daiju Matsumura, Hiroyuki Saitoh, Kazunori Iwamitsu, Toshihiro Okajima, Yoshiki Seno, Masato Okada, and Ichiro Akai,<br>
+“Bayesian sparse modeling of extended x-ray absorption fine structure to determine interstitial oxygen positions in yttrium oxyhydride epitaxial thin film”<br>
+AIP Advances 11, 125013 (2021)<br>
+</li>
+	
 <li>Itsushi Sakata, Takuya Sakata, Kohji Mizoguchi, Satoshi Tanaka, Goro Oohata, Ichiro Akai, Yasuhiko Igarashi, Yoshihiro Nagano, Masato Okada<br>
 “Complex Energies of the Coherent Logitudinal Optical Phonon-plasmon Coupled Mode According to Dynamic Mode Decomposition Analysis”<br>
 Scientific Reports, (2021)<br>
@@ -117,7 +122,7 @@ Plasma and Fusion Research,16,1402073 (2021) <br>
 	
 <li>Haruka Asanuma, Shiro Takagi, Yoshihiro Nagano, Yuki Yoshida, Yasuhiko Igarashi, Masato Okada<br>
 "Statistical Mechanical Analysis of Catastrophic Forgetting in Continual Learning with Teacher and Student Networks"<br>
-Journal of the Physical Society of Japan, Submitted on 16 May 2021</li>
+Journal of the Physical Society of Japan, 90, 104001 (2021)</li>
 	
 <li>Yasuhiko Igarashi, Fabio Iesari, Hiroyuki Setoyama, Toshihiro Okajima, Hiroyuki Kumazoe, Ichiro Akai, Masato Okada<br>
 "Appropriate basis selection based on Bayesian inference for analyzing measured data reflecting photoelectron wave interference"<br>
