岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -102,7 +102,7 @@ AIP Advances 11, 125013 (2021)<br>
 	
 <li>Itsushi Sakata, Takuya Sakata, Kohji Mizoguchi, Satoshi Tanaka, Goro Oohata, Ichiro Akai, Yasuhiko Igarashi, Yoshihiro Nagano, Masato Okada<br>
 “Complex Energies of the Coherent Logitudinal Optical Phonon-plasmon Coupled Mode According to Dynamic Mode Decomposition Analysis”<br>
-Scientific Reports, (2021)<br>
+Scientific Reports 11, 23169 (2021) <br>
 </li>
 
 <li>Kazunori Iwamitsu, Yudai Nishi, Taiga Yamasaki, Mao Kamezaki, Kyohei Higashiyama, Sho Yakura, Hiroyuki Kumazoe , Shingo Aihara, Kenji Nagata, Masato Okada , and Ichiro Akai<br>
