岡田先生のページを更新

--- a/okada/index.html
+++ b/okada/index.html
@@ -92,9 +92,14 @@
 				<div class="inner">
 					<div class="article">
 					  
-<h4>2021(294～305)</h4>
-<ol reversed start="305">
+<h4>2021(294～306)</h4>
+<ol reversed start="306">
 
+<li> Yuichi Yokoyama, Yuichi Yamasaki, Masato Okada, and Masaichiro Mizumaki,<br>
+"Phase Retrieval Algorithm based on Total Variation Regularization for Ferromagnetic Domain Patterns"<br>
+Journal of the Physical Society of Japan, Accepted: 2022/01/05<br>
+</li>	
+	
 <li>Hiroyuki Kumazoe, Yasuhiko Igarashi, Fabio Iesari, Ryota Shimizu, Yuya Komatsu, Taro Hitosugi, Daiju Matsumura, Hiroyuki Saitoh, Kazunori Iwamitsu, Toshihiro Okajima, Yoshiki Seno, Masato Okada, and Ichiro Akai,<br>
 “Bayesian sparse modeling of extended x-ray absorption fine structure to determine interstitial oxygen positions in yttrium oxyhydride epitaxial thin film”<br>
 AIP Advances 11, 125013 (2021)<br>
