岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -92,10 +92,15 @@
 				<div class="inner">
 					<div class="article">
 					  
-<h4>2021(294～306)</h4>
-<ol reversed start="306">
+<h4>2021(294～307)</h4>
+<ol reversed start="307">
 
-<li> Yuichi Yokoyama, Yuichi Yamasaki, Masato Okada, and Masaichiro Mizumaki,<br>
+<li>Taiga Yamasaki, Kazunori Iwamitsu, Hiroyuki Kumazoe, Masato Okada,Masaichiro Mizumaki & Ichiro Akai<br>
+"Bayesian spectroscopy of synthesized soft X-ray absorption spectra showing magnetic circular dichroism at the Ni-L3, -L2 edges"<br>
+SCIENCE AND TECHNOLOGY OF ADVANCED MATERIALS: METHODS,1(1) 75–8, (2021)<br>
+</li>
+	
+<li> Yuichi Yokoyama, Yuichi Yamasaki, Masato Okada, and Masaichiro Mizumaki<br>
 "Phase Retrieval Algorithm based on Total Variation Regularization for Ferromagnetic Domain Patterns"<br>
 Journal of the Physical Society of Japan, Accepted: 2022/01/05<br>
 </li>	
