--- a/okada/index.html
+++ b/okada/index.html
@@ -48,7 +48,7 @@
 				<div class="inner">
 					<div class="article">
 					  <img src="images/okada.jpg" width="160" height="164" alt="OKADA_MASATO">
-                      <p><a href="http://www.k.u-tokyo.ac.jp/complex/index.html" target="_blank">東京大学大学院 新領域創成科学研究科 複雑理工学専攻</a> 教授<br>
+                      <p><a href="http://www.k.u-tokyo.ac.jp/complex/index.html" target="_blank"rel="noopener noreferrer">東京大学大学院 新領域創成科学研究科 複雑理工学専攻</a> 教授<br>
                         <a href="https://www.phys.s.u-tokyo.ac.jp/" target="_blank">東京大学大学院 理学系研究科 物理学専攻</a> 教授<em>（兼担）<br>
                         <a href="https://cbs.riken.jp/jp/" target="_blank">国立研究開発法人 理化学研究所 脳科学総合研究センター</a> 客員主幹研究員<br>
                         <a href="https://cinet.jp/japanese/" target="_blank">国立研究開発法人 NICT-情報通信研究機構 脳情報通信融合研究センター</a> 招聘研究員<br>
@@ -96,8 +96,8 @@
 <ol reversed start="307">
 
 <li>Taiga Yamasaki, Kazunori Iwamitsu, Hiroyuki Kumazoe, Masato Okada,Masaichiro Mizumaki & Ichiro Akai<br>
-"Bayesian spectroscopy of synthesized soft X-ray absorption spectra showing magnetic circular dichroism at the Ni-L3, -L2 edges<br>
-SCIENCE AND TECHNOLOGY OF ADVANCED MATERIALS: METHODS,1(1) 75–8, (2021)<br>
+"<a href="https://www.tandfonline.com/doi/full/10.1080/27660400.2021.1932108" target="_blank"rel="noopener noreferrer">Bayesian spectroscopy of synthesized soft X-ray absorption spectra showing magnetic circular dichroism at the Ni-L3, -L2 edges</a><br>
+ Science and Technology of Advanced Materials: Methods,1(1) 75–8, (2021)<br>
 </li>
 	
 <li> Yuichi Yokoyama, Yuichi Yamasaki, Masato Okada, and Masaichiro Mizumaki<br>
