岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -1918,8 +1918,13 @@ Journal of the Physical Society of Japan,56(2), 798-809, (1987)
 				</header>
 				<div class="inner">
 					<div class="article">
-<ol reversed="reversed" start="29">
+<ol reversed="reversed" start="30">
 
+<li>岡田 真人, 永田 賢二<br>
+  <a href="https://www.jstage.jst.go.jp/article/ieejjournal/141/6/141_330/_pdf" target="_blank"rel="noopener noreferrer">ベイズ計測とスペクトル分解</a><br>
+電気学会誌　特集　計測インフォマティクス：情報科学による計測技術の深化　141巻 6号 p.330-334 (2021)	
+</li>
+	
 <li>松平京介、永田賢二、本武陽一、*岡田真人<br>
 レプリカ交換モンテカルロ法を用いたMixture of Experts モデルにおけるベイズ推論<br>
 情報処理学会論文誌　数理モデル化と応用、Vol.12, No.3, pp.37-45, (2019)
