岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -92,8 +92,8 @@
 				<div class="inner">
 					<div class="article">
 					  
-<h4>2021(294～307)</h4>
-<ol reversed start="307">
+<h4>2021(294～308)</h4>
+<ol reversed start="308">
 
 <li>Taiga Yamasaki, Kazunori Iwamitsu, Hiroyuki Kumazoe, Masato Okada,Masaichiro Mizumaki & Ichiro Akai<br>
 "<a href="https://www.tandfonline.com/doi/full/10.1080/27660400.2021.1932108" target="_blank"rel="noopener noreferrer">Bayesian spectroscopy of synthesized soft X-ray absorption spectra showing magnetic circular dichroism at the Ni-L3, -L2 edges</a><br>
@@ -147,7 +147,7 @@ Physics, submitted on 5 Apr 2021</li>
 Journal of the Physical Society of Japan, 90, 044003, (2021)</li>
 
 <li>Y. Yokoyama, T. Uozumi, K. Nagata, M. Okada, and M. Mizumaki<br>
-“<a href="https://journals.jps.jp/doi/full/10.7566/JPSJ.90.034703" target="_blank">Bayesian Integration for Hamiltonian Parameters of X-ray Photoemission and Absorption Spectroscopy</a>”<br>
+“<a href="https://journals.jps.jp/doi/full/10.7566/JPSJ.90.034703" target="_blank"rel="noopener noreferrer">Bayesian Integration for Hamiltonian Parameters of X-ray Photoemission and Absorption Spectroscopy</a>”<br>
 Journal of the Physical Society of Japan,90, 034703, (2021)</li>
 
 <li>K. Okajima, K. Nagata, and M. Okada<br>
@@ -158,7 +158,11 @@ Journal of the Physical Society of Japan,90, 034001, (2021)</li>
 “Phase prediction method for pattern formation in time-dependent Ginzburg-Landau dynamics for kinetic Ising model without a priori assumptions of domain patterns”<br>
 Phys. Rev. B 103, 094408 (2021)</li>
 
+<li>Narihisa Matsumoto, Yoh-Ichi Mototake, Kenji Kawano, Masato Okada, Yasuko Sugase-Miyamoto<br>
+"<a href="https://doi.org/10.1007/s10827-021-00778-5" target="_blank"rel="noopener noreferrer">Comparison of neuronal responses in primate inferior-temporal cortex and feed-forward deep neural network model with regard to information processing of faces.</a> "<br>
+Journal of computational neuroscience, 49, 251–257 (2021)</li>
 </ol>
+						
 <h3>2020(281～293)</h3>
 <ol reversed="reversed" start="293">
 
