岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -92,19 +92,24 @@
 				<div class="inner">
 					<div class="article">
 					  
+						
+<h4>2021(309～)</h4>
+<ol reversed start="309">
+
+<li> Yuichi Yokoyama, Yuichi Yamasaki, Masato Okada, and Masaichiro Mizumaki<br>
+"Phase Retrieval Algorithm based on Total Variation Regularization for Ferromagnetic Domain Patterns"<br>
+Journal of the Physical Society of Japan, 91, 034701 (2022)<br>
+</li>
+
 <h4>2021(294～308)</h4>
 <ol reversed start="308">
 
+	
 <li>Taiga Yamasaki, Kazunori Iwamitsu, Hiroyuki Kumazoe, Masato Okada,Masaichiro Mizumaki & Ichiro Akai<br>
 "<a href="https://www.tandfonline.com/doi/full/10.1080/27660400.2021.1932108" target="_blank"rel="noopener noreferrer">Bayesian spectroscopy of synthesized soft X-ray absorption spectra showing magnetic circular dichroism at the Ni-L3, -L2 edges</a><br>
- Science and Technology of Advanced Materials: Methods,1(1) 75–8, (2021)<br>
+ Science and Technology of Advanced Materials: Methods,1(1) 75–86, (2021)<br>
 </li>
-	
-<li> Yuichi Yokoyama, Yuichi Yamasaki, Masato Okada, and Masaichiro Mizumaki<br>
-"Phase Retrieval Algorithm based on Total Variation Regularization for Ferromagnetic Domain Patterns"<br>
-Journal of the Physical Society of Japan, Accepted: 2022/01/05<br>
-</li>	
-	
+		
 <li>Hiroyuki Kumazoe, Yasuhiko Igarashi, Fabio Iesari, Ryota Shimizu, Yuya Komatsu, Taro Hitosugi, Daiju Matsumura, Hiroyuki Saitoh, Kazunori Iwamitsu, Toshihiro Okajima, Yoshiki Seno, Masato Okada, and Ichiro Akai,<br>
 “Bayesian sparse modeling of extended x-ray absorption fine structure to determine interstitial oxygen positions in yttrium oxyhydride epitaxial thin film”<br>
 AIP Advances 11, 125013 (2021)<br>
@@ -119,7 +124,12 @@ Scientific Reports 11, 23169 (2021) <br>
 "Replica-Exchange Monte Carlo Method Incorporating Auto-tuning Algorithm Based on Acceptance Ratios for Effective Bayesian Spectroscopy"<br>
 Journal of the Physical Society of Japan. 90, 104004 (2021)<br>
 </li>
-
+	
+<li>Atsushi Machida, Kenji Nagata, Ryo Murakami, Hiroshi Shinotsuka, Hayaru, Shouno, Hideki Yoshikawa & Masato Okada,<br>
+“Bayesian estimation for XPS spectral analysis at multiple core levels”<br>
+Science and Technology of Advanced Materials: Methods, 1, 1, 123-133(2021)<br>
+</li>
+	
 <li>Yuichi Yokoyama, Naruki Tsuji, Ichiro Akai, Kenji Nagata, Masato Okada, and Masaichiro Mizumaki<br>
 "Bayesian Orbital Decomposition and Determination of End Condition for Magnetic Compton Scattering"<br>
 Journal of the Physical Society of Japan. 90, 094802 (2021)<br>
