岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -92,7 +92,12 @@
 					  
 						
 <h4>2022(309～)</h4>
-<ol reversed start="309">
+<ol reversed start="310">
+
+<li>Matsumoto N, Taguchi Y, Shimizu M, Katakami S, Okada M and Sugase-Miyamoto Y<br>
+"Recurrent Connections Might Be Important for Hierarchical Categorization"<br>
+Frontiers in Systems Neuroscience, 16:805990 (2022)<br>
+</li>
 
 <li> Yuichi Yokoyama, Yuichi Yamasaki, Masato Okada, and Masaichiro Mizumaki<br>
 "Phase Retrieval Algorithm based on Total Variation Regularization for Ferromagnetic Domain Patterns"<br>
