岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -91,9 +91,14 @@
 					<div class="article">
 					  
 						
-<h4>2022(309～)</h4>
-<ol reversed start="310">
+<h4>2022(309～311)</h4>
+<ol reversed start="311">
 
+<li>HirotoTanaka, Yasuaki Kazuta, Yasushi Naruse, YukihiroTominari, Hiroaki Umehara,Yoshiyuki Sowa, Takashi Sagawa, Kazuhiro Oiwa, Masato Okada, Ikuro Kawagishi &Hiroaki Kojima<br>
+"Bayesian‑based decipherment of in‑depth information in bacterial chemical sensing beyond pleasant/unpleasant responses"<br>
+Scientific Reports 12, 2965 (2022) 
+</li>
+	
 <li>Matsumoto N, Taguchi Y, Shimizu M, Katakami S, Okada M and Sugase-Miyamoto Y<br>
 "Recurrent Connections Might Be Important for Hierarchical Categorization"<br>
 Frontiers in Systems Neuroscience, 16:805990 (2022)<br>
