岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -99,7 +99,7 @@
 Scientific Reports 12, 2965 (2022) 
 </li>
 	
-<li>Matsumoto N, Taguchi Y, Shimizu M, Katakami S, Okada M and Sugase-Miyamoto Y<br>
+<li>Narihisa Matsumoto, Yusuke Taguchi, Masaumi Shimizu, Shun Katakami, Masato Okada and Yasuko Sugase-Miyamoto<br>
 "Recurrent Connections Might Be Important for Hierarchical Categorization"<br>
 Frontiers in Systems Neuroscience, 16:805990 (2022)<br>
 </li>
