--- a/okada/index.html
+++ b/okada/index.html
@@ -64,6 +64,7 @@
 <div class="article">
 <h3>受賞歴</h3>
 2017年度 日本神経回路学会論文賞受賞<br>
+2010年  Best Paper Method Award 2009 of the Gesellschaft fuer Klassifikation (GfKl, The German Classification Society)<br>
 1998年度 第17回AVIRG（視聴覚情報研究会）賞受賞<br>
 1997年度（社）計測自動制御学会生体・生理工学部会　研究奨励賞受賞<br>
 1996年度 日本神経回路学会奨励賞受賞<br>
