岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -74,7 +74,7 @@
 						
 <div class="article">
 <h3>MESSAGE</h3>
-<p>岡田研究室では，理論的アプローチで脳科学を研究するとともに，情報統計力学・機械学習の研究もおこなっています．<br>
+<p>岡田研究室では，理論的アプローチで脳科学を研究するとともに，データ駆動科学・機械学習の研究もおこなっています．<br>
 大学院志望の方へ：訪問・相談など随時受け付けますので，ご連絡ください．</p>
 <p>E-mail: okada(@)edu.k.u-tokyo.ac.jp</p>
 <p><a href="http://mns.k.u-tokyo.ac.jp/home.html">岡田研究室HP</a></p>	
