岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -1934,7 +1934,12 @@ Journal of the Physical Society of Japan,56(2), 798-809, (1987)
 				</header>
 				<div class="inner">
 					<div class="article">
-<ol reversed="reversed" start="30">
+<ol reversed="reversed" start="31">
+
+<li>岡田 真人<br>
+  <a href="https://www.jstage.jst.go.jp/article/jnns/29/1/29_1/_pdf" target="_blank"rel="noopener noreferrer">視覚情報処理の解明からデータ駆動科学へ</a><br>
+日本神経回路学会誌 巻頭言Vol.29, No.1, 1-2 (2022)	
+</li>
 
 <li>岡田 真人, 永田 賢二<br>
   <a href="https://www.jstage.jst.go.jp/article/ieejjournal/141/6/141_330/_pdf" target="_blank"rel="noopener noreferrer">ベイズ計測とスペクトル分解</a><br>
