--- a/nabika/index.html
+++ b/nabika/index.html
@@ -1,5 +1,51 @@
-<html>
-<body>
-工事中!!!!!
-</body>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+	<meta charset="UTF-8">
+	<title>Tomohiro Nabika</title>
+  </head>
+
+  <body>
+	<h2>竝河 伴裕 (Nabika Tomohiro)</h2>  
+	<br>
+	Last updated: April 15, 2022
+	<br>
+	<hr>
+	<ul>
+	  <li>所属</li>
+	  <ul>
+		<li>東京大学大学院 新領域創成科学研究科 複雑理工学専攻 岡田研究室</li>
+	  </ul>
+	  <li>連絡先</li>
+	  <ul>
+		<li>部屋 : 柏の葉キャンパス基盤棟　7A4</li>
+		<li>TEL : 04-7136-4128</li>
+		<li>E-mail : nabika[at]mns.k.u-tokyo.ac.jp</li>
+	  </ul>
+	</ul>
+	<hr>
+	<ul> 
+	  <li>プロフィール</li>
+	  2018.3 栄光学園高等学校 卒業<br>
+	  2018.4 東京大学理科一類 入学<br>
+	  2022.3 東京大学工学部計数工学科数理情報工学コース 卒業<br>
+	</ul>
+	<hr>
+	<ul>
+	  <li>英文学術論文</li>
+	  <ol>
+	  </ol>
+	  <li>国際学会</li>
+	  <ol reversed>
+	  </ol>
+	  <li>国内学会・シンポジウム</li>
+	  <ol reversed>
+	  </ol>
+	</ul>
+	<br>
+    数学を楽しむフットサルプレイヤーです.
+	<br>
+	<br>
+	<a href="../index.html">研究室ホームページTOP</a>
+  </body>
 </html>
