--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
   <head>
 	<meta charset="UTF-8">
-	<title>Koki Obinata</title>
+	<title>Hayashi Yui</title>
   </head>
 
   <body>
-	<h2>林　悠偉 (Koki Obinata)</h2>  
+	<h2>林　悠偉 ()</h2>  
 	<br>
 	Last updated: 4/15/2022 
 	<br>
