--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -8,7 +8,7 @@
   <body>
 	<h2>林　悠偉 ()</h2>  
 	<br>
-	Last updated: 4/15/2022 
+	Last updated: 4/16/2022 
 	<br>
 	<hr>
 	<ul>
@@ -31,7 +31,7 @@
 	  2022.3 東京理科大学　理工学部　物理学科 卒業<br>
 	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　入学<br>
 	<br>
-	機械学習に興味を持った(元)長距離ランナーです。<br>
+	 物理学と機械学習モデルの開発を行っていました．極真空手１級　書道７段<br>
 	<br>
 	<a href="../index.html">研究室ホームページTOP</a>
   </body>
