--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -31,7 +31,7 @@
 	  2022.3 東京理科大学　理工学部　物理学科 卒業<br>
 	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　入学<br>
 	<br>
-	 物理学と機械学習モデルの開発を行っていました．極真空手１級　書道７段<br>
+	 研究に励むスパゲッティコーダーです．<br>
 	<br>
 	<a href="../index.html">研究室ホームページTOP</a>
   </body>
