--- a/ueda/index.html
+++ b/ueda/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
 	<meta charset="UTF-8">
-	<title>Koki Obinata</title>
+	<title>Hajime Ueda</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
 	  </ul>
 	  <li>連絡先</li>
 	  <ul>
-		<li>部屋 : 柏の葉キャンパス基盤棟　7A8</li>
+		<li>部屋 : 柏の葉キャンパス基盤棟　7A4</li>
 		<li>TEL : 04-7136-4128</li>
 		<li>E-mail : ueda@mns.k.u-tokyo.ac.jp</li>
 	  </ul>
