--- a/kashiwamura/index.html
+++ b/kashiwamura/index.html
@@ -1,5 +1,76 @@
-<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="ja">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head>
+<title>
+柏村　周平
+</title>
+</head>
 <body>
-工事中!!!!!
+<p>
+<h1>柏村　周平 / Shuhei Kashiwamura</h1>
+<br>
+最終更新 : 2022.4.26<br><br>
+
+
+
+</p>
+<p>
+<hr>
+<h2>連絡先</h2>
+<table>
+<tr><td>所属</td><td>東京大学　大学院理学系研究科　物理学専攻　岡田研究室　修士課程</td></tr>
+<tr><td>所在地</td><td>〒277-8561 千葉県柏市柏の葉5-1-5 東京大学 新領域基盤棟</td></tr>
+<tr><td>居室</td><td>基盤棟7A8</td></tr>
+<tr><td>電話</td><td>04-7136-4128</td></tr>
+<tr><td>Email</td><td>kashiwamura[at]mns.k.u-tokyo.ac.jp</td></tr>
+</table>
+</p>
+
+<p>
+<h2>経歴</h2>
+<table>
+<tr><td>2017年4月</td><td>東京大学　教養学部　理科二類　入学</td></tr>
+<tr><td>2021年3月</td><td>東京大学　理学部　地球惑星物理学科　卒業</td></tr>
+<tr><td>2021年4月</td><td>東京大学　大学院理学系研究科　物理学専攻　修士課程　入学</td></tr>
+</p>
+</table>
+
+<br>
+
+<a name="Journal Paper">[<b>英文学術論文</b>]</a></td>
+<td valign="top">
+<hr>
+<font size="4"></font>
+<ol start="2">
+    <li>Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada<br>
+        Bayesian Spectral Deconvolution of X-Ray Absorption Near Edge Structure Discriminating High- and Low-Energy Domain<br>
+        arXiv:2203.09895<br>
+        <a href="https://arxiv.org/abs/2203.09895" target="_blank">https://arxiv.org/abs/2203.09895</a><br>
+    </li>
+</ol>
+<ol start="1">
+    <li>Shuhei Kashiwamura and Yutaka Ohira<br>
+        Magnetic Field Generation by Charge Exchange in a Supernova Remnant in the Early Universe<br>
+        The Astrophysical Journal. 922, 63, 2021<br>
+        <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ac23d1/meta" target="_blank">https://iopscience.iop.org/article/10.3847/1538-4357/ac23d1/meta</a><br>
+    </li>
+</ol>
+    
+
+<a name="National Conferences">[<b>国内学会・シンポジウム</b>]</a></td>
+<td valign="top">
+<hr>
+<font size="4"></font>
+<ol start="1">
+    <li>柏村周平, 片上舜，岩満一功，熊添博之，永田賢二，岡島敏浩，赤井一郎，岡田真人<br>
+        XANESスペクトルのベイズ的スペクトル分解 <br>
+        物理学会第77回年次大会，オンライン開催，2022年3月．<br>
+    </li>
+</ol>
+<br>
+
+<hr>
+<a href="../index.html">戻る</a><br>
 </body>
 </html>
