--- a/sakata/index.html
+++ b/sakata/index.html
@@ -8,7 +8,7 @@
 <p>
 <h1>坂田　逸志 / Itsushi Sakata</h1>
 <br>
-最終更新 : 2017.5.31<br><br>
+最終更新 : 2022.4.28<br><br>
 
 
 
@@ -17,11 +17,11 @@
 <hr>
 <h2>連絡先</h2>
 <table>
-<tr><td>所属</td><td>東京大学　大学院理学系研究科　物理学専攻　岡田研究室　修士課程</td></tr>
+<tr><td>所属</td><td>東京大学　大学院理学系研究科　物理学専攻　岡田研究室　博士課程</td></tr>
 <tr><td>所在地</td><td>〒277-8561 千葉県柏市柏の葉5-1-5 東京大学 新領域基盤棟</td></tr>
 <tr><td>居室</td><td>基盤棟7A8</td></tr>
 <tr><td>電話</td><td>04-7136-4128</td></tr>
-<tr><td>Email</td><td>sakata[at]mns.k.u-tokyo.ac.jp</td></tr>
+<tr><td>Email</td><td>sakata-itsushi160[at]g.ecc.u-tokyo.ac.jp</td></tr>
 </table>
 </p>
 
@@ -32,6 +32,8 @@
 <tr><td>2013年4月</td><td>京都大学　理学部　入学</td></tr>
 <tr><td>2017年3月</td><td>京都大学　理学部　卒業</td></tr>
 <tr><td>2017年4月</td><td>東京大学　大学院理学系研究科　物理学専攻　修士課程　入学</td></tr>
+<tr><td>2019年3月</td><td>東京大学　大学院理学系研究科　物理学専攻　修士課程　卒業</td></tr>
+<tr><td>2019年4月</td><td>東京大学　大学院理学系研究科　物理学専攻　博士課程　入学</td></tr>
 </p>
 </table>
 
