岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -93,8 +93,13 @@
 					<div class="article">
 					  
 						
-<h4>2022(307～309)</h4>
-<ol reversed start="309">
+<h4>2022(307～)</h4>
+<ol reversed start="310">
+
+<li>Toru Aonishi, Kazushi Mimura, Masato Okada, Yoshihisa Yamamoto<br>
+"L0 regularization-based compressed sensing with quantum-classical hybrid approach"<br>
+to be published in Quantum Science and Technology (2022) 
+</li>
 
 <li>HirotoTanaka, Yasuaki Kazuta, Yasushi Naruse, YukihiroTominari, Hiroaki Umehara,Yoshiyuki Sowa, Takashi Sagawa, Kazuhiro Oiwa, Masato Okada, Ikuro Kawagishi &Hiroaki Kojima<br>
 "Bayesian‑based decipherment of in‑depth information in bacterial chemical sensing beyond pleasant/unpleasant responses"<br>
