--- a/shimizu/index.html
+++ b/shimizu/index.html
@@ -1,5 +1,60 @@
-<html>
-<body>
-工事中!!!!!
-</body>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+	<meta charset="UTF-8">
+	<title>Masaumi Shimizu</title>
+  </head>
+
+  <body>
+	<h2>清水 将海 (Masaumi Shimizu)</h2>  
+	<br>
+	Last updated: May 18, 2022
+	<br>
+	<hr>
+	<ul>
+	  <li>所属</li>
+	  <ul>
+		<li>東京大学大学院 新領域創成科学研究科 複雑理工学専攻 岡田研究室</li>
+	  </ul>
+	  <li>連絡先</li>
+	  <ul>
+		<li>部屋 : 柏の葉キャンパス基盤棟　7A4</li>
+		<li>E-mail : m-shimizu0725[at]g.ecc.u-tokyo.ac.jp</li>
+	  </ul>
+	</ul>
+	<hr>
+	<ul> 
+	  <li>プロフィール</li>
+	  2016.3 県立上田高等学校 卒業<br>
+	  2017.4 東京理科大学理工学部物理学科 入学<br>
+	  2021.3 東京理科大学理工学部物理学科 卒業<br>
+	  2021.4 東京大学大学院 新領域創成科学研究科 複雑理工学専攻 修士課程入学<br>
+	</ul>
+	<hr>
+	<ul>
+	  <li>英文学術論文</li>
+	  <ol>
+		<li>
+			Matsumoto N, Taguchi Y, Shimizu M, Katakami S, Okada M and Sugase-Miyamoto Y. Recurrent Connections Might Be Important for Hierarchical Categorization. Frontiers in Systems Neuroscience, 16:805990 (2022).
+		</li>
+	  </ol>
+	  <br>
+	  <li>国際学会</li>
+	  <ol>
+	  </ol>
+	  <li>国内学会・シンポジウム</li>
+	  <ol>
+		<li>
+			清水将海，片上舜，田口優介，岡田真人，菅生康子，松本有央，「階層的カテゴリー化における再帰的ネットワークの重要性」，『日本物理学会第77回年次大会』，16aB19-7，オンライン開催，2022年3月．
+		</li>
+		<li>
+			清水将海，片上舜，田口優介，岡田真人，菅生康子，松本有央，「階層的カテゴリー化におけるリカレント結合の重要性」，『東京理科大学パラレル脳センシング技術研究部門第1回公開シンポジウム』，東京理科大学，2021年12月．
+		</li>
+	  </ol>
+	</ul>
+	<br>
+	<br>
+	<p>神経科学の電気生理実験のデータを解析して脳内でカテゴリー情報がどのように処理されているかを探っています。</p>
+	<a href="../index.html">研究室ホームページTOP</a>
+  </body>
 </html>
