update: Update ogura page

--- a/ogura/index.html
+++ b/ogura/index.html
@@ -10,7 +10,7 @@
 <p>
 <h1>小倉　裕貴 / Ogura Yuki</h1>
 <br>
-最終更新 : 2022.4.27<br><br>
+最終更新 : 2022.5.18<br><br>
 
 
 
@@ -39,33 +39,35 @@
 
 <br>
 
-<a name="Journal Paper">[<b>英文学術論文</b>]</a></td>
+<!-- <a name="Journal Paper">[<b>英文学術論文</b>]</a></td>
 <td valign="top">
 <hr>
 <font size="4"></font>
 <ol start="1">
     Not yet
-    <!-- <li>Taro Yamada<br>
+    <li>Taro Yamada<br>
         Theory of Everything<br>
         Journal of the Physical Society of Japan. 00(0), 00000, 2021<br>
         <a href="https://doi.org/" target="_blank">https://doi.org/</a><br>
-    </li> -->
-</ol>
+    </li>
+</ol> -->
     
 
 <a name="National Conferences">[<b>国内学会・シンポジウム</b>]</a></td>
 <td valign="top">
 <hr>
 <font size="4"></font>
-<ol start="3">
+<ol start="1">
     <li>小倉裕貴，片上舜，中山智文，五十嵐康彦，石川敦之，袖山慶太郎，永田賢二，岡田真人<br>
         スパースモデリングによる計算データを用いた実験値予測 <br>
         物理学会第77回年次大会，オンライン開催，2022年3月．<br>
     </li>
 </ol>
 <br>
+機械学習やAPI開発に興味があるサウナーです．<br>
+<br>
 
-<hr>
+
 <a href="../people.html">people</a><br>
 <a href="../home.html">home</a><br>
 </body>
