--- a/kashiwamura/index.html
+++ b/kashiwamura/index.html
@@ -10,7 +10,7 @@
 <p>
 <h1>柏村　周平 / Shuhei Kashiwamura</h1>
 <br>
-最終更新 : 2022.4.26<br><br>
+最終更新 : 2022.5.18<br><br>
 
 
 
@@ -22,7 +22,6 @@
 <tr><td>所属</td><td>東京大学　大学院理学系研究科　物理学専攻　岡田研究室　修士課程</td></tr>
 <tr><td>所在地</td><td>〒277-8561 千葉県柏市柏の葉5-1-5 東京大学 新領域基盤棟</td></tr>
 <tr><td>居室</td><td>基盤棟7A8</td></tr>
-<tr><td>電話</td><td>04-7136-4128</td></tr>
 <tr><td>Email</td><td>kashiwamura[at]mns.k.u-tokyo.ac.jp</td></tr>
 </table>
 </p>
@@ -45,7 +44,7 @@
 <ol start="2">
     <li>Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada<br>
         Bayesian Spectral Deconvolution of X-Ray Absorption Near Edge Structure Discriminating High- and Low-Energy Domain<br>
-        arXiv:2203.09895<br>
+        arXiv:2203.09895, 2022 (to be published in Journal of the Physical Society of Japan)<br>
         <a href="https://arxiv.org/abs/2203.09895" target="_blank">https://arxiv.org/abs/2203.09895</a><br>
     </li>
 </ol>
