--- a/machida/index.html
+++ b/machida/index.html
@@ -1,5 +1,77 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Machida Atsushi</title>
+</head>
+
 <body>
-工事中!!!!!
+
+  <h2>町田　惇(Machida Atsushi)</h2>
+
+  <br>
+  Last updated: May 18, 2022
+  <br>
+  <hr>
+
+  <ul>
+    <li>所属</li>
+    <ul>
+      <li>東京大学大学院 理学系研究科 物理学専攻 岡田研究室</li>
+    </ul>
+    <li>連絡先</li>
+    <ul>
+      <li>部屋 : 柏の葉キャンパス基盤棟　7A4</li>
+      <!-- <li>TEL : 04-7136-5494</li> -->
+      <li>E-mail : machida [at] mns.k.u-tokyo.ac.jp 　</li>
+    </ul>
+  </ul>
+  <hr>
+  <ul>
+    <li>プロフィール</li>
+    2016.3 聖光学院高等学校　卒業<br>
+    2016.4 東京大学理科一類　入学<br>
+    2020.3 東京大学理学部物理学科　卒業<br>
+    2020.4 東京大学大学院　理学系研究科　物理学専攻　修士課程　入学<br>
+    2022.3 東京大学大学院　理学系研究科　物理学専攻　修士課程　修了<br>
+    2022.4 東京大学大学院　理学系研究科　物理学専攻　博士課程　入学<br>
+  </ul>
+  <hr>
+  <ul>
+    <li>英語学術論文</li>
+      <ol reversed>
+        <li>
+          Atsushi Machida, Kenji Nagata, Ryo Murakami, Hiroshi Shinotsuka, Hayaru Shouno, Hideki Yoshikawa and Masato Okada<br>
+          "Bayesian estimation for XPS spectral analysis at multiple core levels"<br>
+          Science and Technology of Advanced Materials: Methods, 1:1, 123-133, 2021<br>
+          <a href="https://doi.org/10.1080/27660400.2021.1943172">https://doi.org/10.1080/27660400.2021.1943172</a>
+        </li><br>
+      </ol>
+    <li>国際学会</li>
+      <ol reversed>
+        <li>
+          Kenji Nagata, Atsushi Machida, Masato Okada<br>
+          “Spectral Analysis with Bayesian Inference”<br>
+          Material Research Meeting 2021 (MRM2021), 12/2021. (Oral session, Invited)
+        </li><br>
+      </ol>
+    <li>国内学会・シンポジウム</li>
+      <ol reversed>
+        <li>
+          町田惇，永田賢二，村上諒，篠塚寛志，庄野逸，吉川英樹，岡田真人<br>
+          SESSAを生成モデルに用いた多元素XPSスペクトル解析に向けたベイズ推定<br>
+          第69回応用物理学会春季学術講演会，青山学院大学 相模原キャンパス＆オンライン ハイブリッド開催，2022年3月．
+        </li><br>
+        <li>
+          町田惇，永田賢二，村上諒，篠塚寛志，庄野逸，吉川英樹，岡田真人<br>
+          多重ピークを基底関数とした多元素XPSスペクトル解析に向けたベイズ推定<br>
+          第68回応用物理学会春季学術講演会，オンライン開催，2021年3月．
+        </li><br>
+      </ol>
+  </ul>
+  <br>
+  <br>
+  <br>
+  <b><a href="../">Back to member page</a></b>
 </body>
 </html>
