--- a/people.html
+++ b/people.html
@@ -149,13 +149,13 @@
 		  
 		   <div class="member">
           <div>
-            <a href=><a href="./shioya/"><img src="./images/photos/shioya.png" alt="塩谷 佳介"></a>
+            <a href=><a href="http://itachisaigo.wp.xdomain.jp/"><img src="./images/photos/shioya.png" alt="塩谷 佳介"></a>
             <dl>
               <dt><em>塩谷 佳介</em></dt>
               <dd class="ename">SHIOYA, Keisuke</dd>
               <dd class="title">MS Student</dd>
               <dd class="email">shioya[at]mns.k.u-toky0.ac.jp</dd>
-              <dd class="web"><a href="./shioya/">HP</a></dd>
+              <dd class="web"><a href="http://itachisaigo.wp.xdomain.jp/">HP</a></dd>
             </dl>
           </div>
         </div>
