--- a/okada/index.html
+++ b/okada/index.html
@@ -94,7 +94,12 @@
 					  
 						
 <h4>2022(307～)</h4>
-<ol reversed start="311">
+<ol reversed start="312">
+
+<li>Ryota Moriguchi1, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada<br>
+"Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy"<br>
+to be published in Journal of the Physical Society of Japan (2022)
+</li>
 
 <li>Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada<br>
 "Bayesian Spectral Deconvolution of X-Ray Absorption Near Edge Structure Discriminating High- and Low-Energy Domain"<br>
