岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -98,7 +98,7 @@
 
 <li>Shun Katakami, Hirotaka Sakamoto, Kenji Nagata, Taka-hisa Arima, and Masato Okada<br>
 "Bayesian parameter estimation from dispersion relation observation data with Poisson process"<br>
-Phys.Rev.E105,065301(2022)
+Physical Review E 105, 065301(2022)
 </li>
 
 <li>Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada<br>
