--- a/kashiwamura/index.html
+++ b/kashiwamura/index.html
@@ -44,8 +44,8 @@
 <ol start="2">
     <li>Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada<br>
         Bayesian Spectral Deconvolution of X-Ray Absorption Near Edge Structure Discriminating High- and Low-Energy Domain<br>
-        arXiv:2203.09895, 2022 (to be published in Journal of the Physical Society of Japan)<br>
-        <a href="https://arxiv.org/abs/2203.09895" target="_blank">https://arxiv.org/abs/2203.09895</a><br>
+        Journal of the Physical Society of Japan, 91(7), 074009, 2022<br>
+        <a href="https://doi.org/10.7566/JPSJ.91.074009" target="_blank">https://doi.org/10.7566/JPSJ.91.074009</a><br>
     </li>
 </ol>
 <ol start="1">
