--- a/okada/index.html
+++ b/okada/index.html
@@ -94,7 +94,12 @@
 					  
 						
 <h4>2022(307～)</h4>
-<ol reversed start="312">
+<ol reversed start="313">
+
+<li>Masato Kamiya, Yasuhiko Igarashi, Masato Okada, Toshitaka Baba<br>
+"Numerical experiments on tsunami flow depth prediction for clustered areas using regression and machine learning models"<br>
+Earth, Planets and Space (2022)
+</li>
 
 <li>Shun Katakami, Hirotaka Sakamoto, Kenji Nagata, Taka-hisa Arima, and Masato Okada<br>
 "Bayesian parameter estimation from dispersion relation observation data with Poisson process"<br>
@@ -103,12 +108,12 @@ Physical Review E 105, 065301(2022)
 
 <li>Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada<br>
 "Bayesian Spectral Deconvolution of X-Ray Absorption Near Edge Structure Discriminating High- and Low-Energy Domain"<br>
-to be published in Journal of the Physical Society of Japan
+Journal of the Physical Society of Japan, 91(7), 074009, (2022)
 </li>
 
 <li>Toru Aonishi, Kazushi Mimura, Masato Okada, Yoshihisa Yamamoto<br>
 "L0 regularization-based compressed sensing with quantum-classical hybrid approach"<br>
-to be published in Quantum Science and Technology (2022) 
+Quantum Science and Technology, 7 035013 (2022) 
 </li>
 
 <li>HirotoTanaka, Yasuaki Kazuta, Yasushi Naruse, YukihiroTominari, Hiroaki Umehara,Yoshiyuki Sowa, Takashi Sagawa, Kazuhiro Oiwa, Masato Okada, Ikuro Kawagishi &Hiroaki Kojima<br>
